--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#db setting
+spring.datasource.url=jdbc:mariadb://localhost:3306/map_memory
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+#spring.security setting
+spring.security.user.name=deer
+spring.security.user.password=fbsrhkd1!
+
+#JPA Setting
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+
+##DEV-TOOLS
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
