--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
 ##DEV-TOOLS
 spring.devtools.livereload.enabled=true
+server.port=8090
